# vpams

./: .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  ENABLE_SSH_PASSWORD.md  MANUAL_DEPLOYMENT.md  Makefile  PHASE1_COMPLETION_SUMMARY.md  PORT_TROUBLESHOOTING.md  PUPPETEER_MCP_SETUP.md  README.md  SECURITY.md  SHARDING_CHECKPOINT.md  check-react-ui.js  claude.md  debug-frontend-deep.js  docker-compose.mams.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.services.yml  docker-compose.yml  frontend-diagnostic-report.json  js-updates.md  mams.code-workspace  planning.md  prd.md  pyproject.toml  pytest.ini  requirements-dev.txt  sonar-project.properties  tasks.md  test_coverage_analysis.md  (+1 more)
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  docker-build.yml  e2e-tests.yml  labeler.yml  performance.yml  registry-cleanup.yml  release.yml  security.yml  stale.yml  test.yml
.security/: baseline.json
benchmarks/: README.md
benchmarks/api/: asset-upload-benchmark.js  k6-config.js
database/: README.md  docker-compose.yml
docs/: README.md  branch-protection.md  cdn-deployment-guide.md  database-optimization-guide.md  database-sharding.md  development-setup.md  faq.md  frontend-optimization-guide.md  performance-monitoring-guide.md  query-caching-guide.md  sharding-implementation-status.md
frontend/: .eslintrc.json  Dockerfile  RTK_QUERY_GUIDE.md  cypress.config.ts  nginx.conf  package-lock.json  package-optimization.json  package.json  vite.config.lazy.ts  vite.config.optimization.ts
integrations/avid-mediacomposer/ama-plugin/: CMakeLists.txt
integrations/avid-mediacomposer/ama-plugin/src/: MAMSAPIClient.h  MAMSContainer.cpp  MAMSContainer.h  MAMSPlugin.cpp  MAMSPlugin.h
marketing/: README.md
mobile/: .eslintrc.js  README.md  app.json  babel.config.js  index.js  metro.config.js  package.json  tsconfig.json
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: backup-mams.sh  code-quality-report.py  full-deployment.sh  generate-dockerfiles.sh  init-databases.sh  monitoring-setup.sh  run-e2e-tests.sh  setup-dev-env.sh  setup-local-registry.sh  test_coverage_report.py
services/: Dockerfile.template
tests/: test_utils.py
(+1965 files in other folders)
